setup/applications/k8s/kubernetes-dashboard/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubernetes-dashboard-https-gw
  annotations:
    gateway.envoyproxy.io/envoy-image: "envoyproxy/envoy:distroless-v1.31-latest"
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          group: ""
          name: kubernetes-dashboard-tls-secret
