setup/applications/k8s/kubernetes-dashboard/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
spec:
  parentRefs:
    - name: kubernetes-dashboard-https-gw
  hostnames:
    - lab.swag-code.com     # to be replaced with your EXTERNAL-IP
  rules:
    - backendRefs:
      - name: kubernetes-dashboard-web
        port: 8000
      matches:
      - path:
          type: PathPrefix
          value: /dashboard/
#      backendRefs:
#      - name: kubernetes-dashboard-web
#        port: 8000
#      - name: kubernetes-dashboard-kong-proxy 
#        port: 443
